fix overlap

--- a/scribble-pad_style.css
+++ b/scribble-pad_style.css
@@ -41,7 +41,7 @@ p {
   color: black;
 }
 .content {
-  margin-left: 150px;
+  margin-left: 200px;
   padding-left: 20px;
 }
 ul {
